--- a/Celeste_201318666.html
+++ b/Celeste_201318666.html
@@ -1,13 +1,12 @@
 <html>
 <head>
-<title>
-</title>
+<title> Tarea Git </title>
 </head>
 
 <body>
-<div>
-<h1-h6>
-</div>
+
+<h1> Celeste Marilù Duarte Amaya </h1>
+<h3> 201318666 </h3>
 
 </body>
 </html>
